# erslib

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: dbio.cmake  erslib-config.cmake.in  erslib-helper.cmake  utils.cmake
example/: error.cpp  regular_splitter.hpp
include/aengine/: core.hpp  fwd.hpp
include/aengine/core/: dependency.hpp  dependency_graph.hpp  manager.hpp  mod.hpp  phase_context.hpp  proto.hpp  resource.hpp  setting.hpp
include/aengine/enum/: phase.hpp
include/aengine/resource/: texture.hpp
include/aengine/script/: error.hpp  exception.hpp  util.hpp
include/aengine/util/: stage.hpp
include/aescript/: error.hpp  exception.hpp  layout.hpp  layout_verifier.hpp  util.hpp
include/aescript/impl/: context.hpp  descriptor.hpp  field.hpp  layout.hpp  parser.hpp  property.hpp  property_context.hpp  trait.hpp  util.hpp  verifier.hpp
include/aescript/parsers/: innate.hpp  into.hpp  tuple.hpp  user_defined.hpp  variant.hpp  vector.hpp
include/aescript/properties/: exclusive_with.hpp  inclusive_with.hpp  one_of.hpp  parse_into.hpp  parse_into_with_index.hpp  presence.hpp  with_types.hpp
include/aescript/property/: exclusive_with.hpp
include/aescript/verifiers/: innate.hpp  presence.hpp  user_defined.hpp  vector.hpp  with_types.hpp
include/contrib/: json.hpp  json_util.hpp  strong_typedef.hpp
include/easy_ecs/: component.hpp  engine.hpp  entity.hpp  fwd.hpp  group.hpp  registry.hpp  system.hpp
include/easy_ecs/util/: component_initializer.hpp
include/erslib/: assert.hpp  dbio.hpp  exception.hpp  macro.hpp  overloads.hpp  shared.hpp  views.hpp
include/erslib/adaptor/: ranges.hpp
include/erslib/aengine/: dependency.hpp  dependency_graph.hpp  fwd.hpp  manager.hpp  mod.hpp  phase_context.hpp  resource.hpp  setting.hpp
include/erslib/aescript/: exception.hpp  layout.hpp
include/erslib/algorithm/: container.hpp
include/erslib/concept/: callable.hpp  constexpr.hpp  container.hpp  functional.hpp  hashable.hpp  json.hpp  sbo.hpp  string.hpp  string_convertible.hpp  stringly.hpp  util.hpp
include/erslib/constant/: filesystem.hpp
include/erslib/container/: heterogeneous.hpp  stringly.hpp  swiss_table.hpp  unordered_table.hpp
include/erslib/contrib/: json.hpp
include/erslib/convert/: integral.hpp  string.hpp  time.hpp
include/erslib/core/: assert.hpp  exception.hpp  export.hpp  views.hpp
include/erslib/dbio/: constant.hpp  database.hpp  entity.hpp  eval.hpp  fwd.hpp  persistency.hpp  pqxx_row.hpp  query_store.hpp
include/erslib/easy_ecs/: component.hpp  entity.hpp  group.hpp  registry.hpp
include/erslib/error/: error.hpp  include.hpp  result.hpp
include/erslib/exception/: filesystem_error.hpp  internal.hpp  logic_error.hpp  runtime_error.hpp
include/erslib/formatter/: include.hpp  pair.hpp  range.hpp  tuple.hpp
include/erslib/hashing/: algorithm.hpp  base.hpp  direct.hpp  rapid-impl.hpp  rapid.hpp  std.hpp
include/erslib/io/: json_schema.hpp
include/erslib/memory/: any.hpp  deleter.hpp  holder.hpp  shared_ptr.hpp  unique_ptr.hpp
include/erslib/meta/: type_hash.hpp  type_info.hpp  type_literal.hpp  type_name.hpp
include/erslib/pattern/: basic.hpp  builder.hpp  counter.hpp  proxy.hpp
include/erslib/ranges/: filter.hpp
scripts/: README.md  __main__.py
scripts/codegen/: __init__.py  base_codegen.py  enum_codegen.py  query_codegen.py  table_codegen.py  util.py
src/: CMakeLists.txt  main.cpp
src/aengine/: core.cpp
src/aengine/core/: dependency.cpp  dependency_graph.cpp  mod.cpp  proto.cpp
src/aengine/resource/: texture.cpp
src/aengine/util/: stage.cpp
src/aescript/impl/: field.cpp  layout.cpp  util.cpp
src/aescript/impl/properties/: exclusive_with.cpp  presence.cpp
src/aescript/properties/: exclusive_with.cpp  inclusive_with.cpp  one_of.cpp  presence.cpp
src/aescript/property/: exclusive_with.cpp  presence.cpp
src/contrib/: json.cpp
src/easy_ecs/: component.cpp  engine.cpp  entity.cpp  group.cpp  registry.cpp  system.cpp
src/easy_ecs/util/: component_initializer.cpp
src/erslib/: assert.cpp  boost-fix.cpp  splitting.cpp
src/erslib/aengine/: dependency.cpp  dependency_graph.cpp  mod.cpp
src/erslib/aengine/resource/: texture.cpp
src/erslib/aengine/util/: stage.cpp
src/erslib/aescript/impl/: field.cpp  layout.cpp  util.cpp
src/erslib/aescript/properties/: exclusive_with.cpp  inclusive_with.cpp  one_of.cpp  presence.cpp
src/erslib/contrib/: json.cpp
src/erslib/core/: assert.cpp
src/erslib/core/exception/: internal.cpp
src/erslib/core/splitting/: regular.cpp  smart.cpp
src/erslib/core/type/: error.cpp
src/erslib/core/util/: file.cpp  string.cpp
src/erslib/dbio/: database.cpp  query_store.cpp
src/erslib/easy_ecs/: entity.cpp  group.cpp  registry.cpp
src/erslib/error/: error.cpp
src/erslib/exception/: internal.cpp
src/erslib/splitting/: regular.cpp  smart.cpp
src/erslib/type/: error.cpp  exception.cpp
src/erslib/util/: file.cpp  string.cpp
test/: CMakeLists.txt  error.hpp  simple.cpp  test.cpp
test/case/: any.cpp  autorng.cpp  convert.cpp  easy_ecs.cpp  error.cpp  json.cpp  memory.cpp  meta.cpp  splitting.cpp  string.cpp  thread_safe_map.cpp
test/sandbox/easy_ecs/: CMakeLists.txt  main.cpp
test/sandbox/rmlui_and_sdl3_gui/: main.cpp
test/sandbox/rmlui_and_sdl3_gui/res/: test.rcss  test.rml
test/sandbox/sdl3_window/: sdl3_window.cpp
test/simple/: aescript_layout_verifier.cpp  contrib_json.cpp  core_autorng.cpp  core_error.cpp  core_memory.cpp  core_meta.cpp  core_splitting.cpp  core_string.cpp  easy_ecs_protos.cpp  erslib_any.cpp  erslib_autorng.cpp  erslib_convert.cpp  erslib_error.cpp  erslib_memory.cpp  erslib_meta.cpp  erslib_splitting.cpp  erslib_string.cpp
test/stateful/dbio_codegen/: CMakeLists.txt  dbio_codegen.cpp
test/stateful/dbio_codegen/schema/: stats.g.json  user.g.json  user.g.toml
test/stateful/dbio_codegen/schema/sql/: rename_user.sql
test/stateful/rmlui_init/: CMakeLists.txt  rmlui_init.cpp
test/stateful/rmlui_init/res/: test.rml
(+152 files in other folders)
